--- a/challenge/build.gradle
+++ b/challenge/build.gradle
@@ -25,6 +25,13 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation group: 'org.apache.commons', name: 'commons-csv', version: '1.10.0'
+
+	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: '3.1.5'
+	implementation group: 'com.h2database', name: 'h2', version: '2.2.224'
+
+
+
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
