--- a/challenge/build.gradle
+++ b/challenge/build.gradle
@@ -9,6 +9,8 @@ version = '0.0.1-SNAPSHOT'
 
 java {
 	sourceCompatibility = '17'
+	sourceCompatibility = JavaVersion.VERSION_17
+	targetCompatibility = JavaVersion.VERSION_17
 }
 
 configurations {
@@ -29,10 +31,10 @@ dependencies {
 
 	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: '3.1.5'
 	implementation group: 'com.h2database', name: 'h2', version: '2.2.224'
+    testImplementation 'junit:junit:4.13.1'
 
 
-
-	compileOnly 'org.projectlombok:lombok'
+    compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
