--- a/challenge/gradle/wrapper/gradle-wrapper.properties
+++ b/challenge/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,7 @@
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-8.4-bin.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-7.4-bin.zip
+org.gradle.java.home=C:\\Users\\Obradowski\\.jdks\\corretto-17.0.9
 networkTimeout=10000
 validateDistributionUrl=true
 zipStoreBase=GRADLE_USER_HOME
