--- a/challenge/src/main/resources/application.properties
+++ b/challenge/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.datasource.url=jdbc:h2:mem:5DCChallenge;DB_CLOSE_DELAY=-1
 spring.datasource.driverClassName=org.h2.Driver
 
 spring.datasource.username=sa
-spring.datasource.password=password
+spring.datasource.password=
 
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
